# spiffyplots

./: .codecov.yaml  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  conf.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: .rst  Makefile  conf.py  index.rst  make.bat
docs/source/: conf.py  index.rst  installation.rst  modules.rst  spiffyplots.rst  usage.rst
examples/: Spiffyplots Demo - Part 1.ipynb  Spiffyplots Demo - Part 2.ipynb  ex_multipanel.py
spiffyplots/: __init__.py  axis.py  lineplots.py  multipanel.py
spiffyplots/base/: __init__.py  _figure.py  _panel.py
styles/: spiffy.mplstyle
styles/misc/: latex.mplstyle  minor-ticks.mplstyle  right-axis.mplstyle  top-axis.mplstyle
styles/specific/: heatmap.mplstyle
tests/: __init__.py  test_colors.py  test_multipanel.py  test_spiffyplots.py
