[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "setuptools", "matplotlib", "wheel", "pytest-runner"
]

[tool.black]
    py38 = true
    include = '\.pyi?$'
    exclude = '''
    /(
        \.git
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | _build
      | buck-out
      | build
      | dist
    )/
    '''

